docs: add regsiter api
