# controller/auth.go
@@ -2,7 +2,19 @@ package controller
 
 import "github.com/gofiber/fiber/v2"
 
-// @Summary Authorize with credential - 구현 안 됨
+// @Summary Register with credential - not implemented
+// @Description Register with id and password
+// @Tags auth
+// @Accept json
+// @Product json
+// @Param request body model.RegisterForm true "Register"
+// @Success 200 {object} model.AuthResponse
+// @Router /auth/register [post]
+func RegisterWithCredential(c *fiber.Ctx) error {
+	return nil
+}
+
+// @Summary Authorize with credential - not implemented
 // @Description Authorize with id and password
 // @Tags auth
 // @Accept json
@@ -14,7 +26,7 @@ func AuthorizeWithCredential(c *fiber.Ctx) error {
 	return nil
 }
 
-// @Summary Authorize with refresh token - 구현 안 됨
+// @Summary Authorize with refresh token - not implemented
 // @Description Authorize with refresh token
 // @Tags auth
 // @Accept json
